consolidate duplicate code from both samples into shared library, use middleware for databag methods, add auto save middleware, clenup startup some

--- a/NetFrameworkWebApi/V4NetFrameworkBot/Web.config
+++ b/NetFrameworkWebApi/V4NetFrameworkBot/Web.config
@@ -5,8 +5,9 @@
   -->
 <configuration>
   <appSettings>
-    <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
+    <add key="MicrosoftAppId" value="" />
+    <add key="MicrosoftAppPassword" value="" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
