--- a/NetCoreWebApi/V4NetCoreBot/V4NetCoreBot.csproj
+++ b/NetCoreWebApi/V4NetCoreBot/V4NetCoreBot.csproj
@@ -5,7 +5,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Classic\" />
+    <Compile Remove="Classic\**" />
+    <Content Remove="Classic\**" />
+    <EmbeddedResource Remove="Classic\**" />
+    <None Remove="Classic\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Remove="Dialogs\BridgeComponentDialog.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Dialogs\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
@@ -16,9 +26,12 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
     <PackageReference Include="Microsoft.Bot.Builder" Version="4.2.0" />
     <PackageReference Include="Microsoft.Bot.Builder.Dialogs" Version="4.2.0" />
-    <PackageReference Include="Microsoft.Bot.Builder.Integration.AspNet.Core" Version="4.2.0" />
     <PackageReference Include="Microsoft.Bot.Configuration" Version="4.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\V3Migration\V3Migration.csproj" />
   </ItemGroup>
 
 </Project>
