--- a/NetFrameworkWebApi/V4NetFrameworkBot/V4NetFrameworkBot.csproj
+++ b/NetFrameworkWebApi/V4NetFrameworkBot/V4NetFrameworkBot.csproj
@@ -61,12 +61,6 @@
     <Reference Include="Microsoft.Bot.Builder.Dialogs, Version=4.2.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Bot.Builder.Dialogs.4.2.0\lib\netstandard2.0\Microsoft.Bot.Builder.Dialogs.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Bot.Builder.Integration.AspNet.WebApi, Version=4.2.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.Bot.Builder.Integration.AspNet.WebApi.4.2.0\lib\net461\Microsoft.Bot.Builder.Integration.AspNet.WebApi.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Bot.Configuration, Version=4.2.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.Bot.Configuration.4.2.0\lib\netstandard2.0\Microsoft.Bot.Configuration.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.Bot.Connector, Version=4.2.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Bot.Connector.4.2.0\lib\netstandard2.0\Microsoft.Bot.Connector.dll</HintPath>
     </Reference>
@@ -203,16 +197,8 @@
   <ItemGroup>
     <Compile Include="App_Start\BotConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Compile Include="BotAccessors.cs" />
-    <Compile Include="Classic\BotDataBag.cs" />
-    <Compile Include="Classic\ClassicExtensions.cs" />
-    <Compile Include="Classic\DataBagExtensions_weaktable.cs" />
-    <Compile Include="Classic\DataBagExtensions.cs" />
-    <Compile Include="Classic\Exceptions.cs" />
-    <Compile Include="Classic\IBotDataBag.cs" />
     <Compile Include="Controllers\BotControllerBase.cs" />
     <Compile Include="Controllers\MessagesController.cs" />
-    <Compile Include="Dialogs\BridgeComponentDialog.cs" />
     <Compile Include="Dialogs\FlightsDialog.cs" />
     <Compile Include="Dialogs\HotelsDialog.cs" />
     <Compile Include="Dialogs\RootDialog.cs" />
@@ -235,7 +221,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-    <Content Include="V4NetFramework.bot" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\V3Migration\V3Migration.csproj">
+      <Project>{1173055e-2689-4a6f-b4ef-5d6a99e94d87}</Project>
+      <Name>V3Migration</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
